# fisproject

./: .env.example  .gitignore  ADMIN_CONFIGURATIONS_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Funcionamiento.postman_collection.json  Maritime_API_Postman_Collection.json  README.md  SETUP_DATABASE.md  START_GATEWAY.md  check_cargo.py  check_clients.py  check_enums.py  class_diagram.puml  core_er_diagram.puml  deployment_diagram.puml  docker-compose.gateway.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  er_diagram.puml  gateway_er_diagram.puml  gateway_postman_collection.json  install-basic.sh  network_architecture.puml  pyproject.toml  report.html  requirements-py312.txt  requirements.txt  test_insert.py
.github/workflows/: cd.yml  ci.yml  release.yml
Front/adminConfigurations/: .env.example  .gitignore  README-GATEWAY.md  README.md  angular.json  package-lock.json  package.json
PrototipoGrafico/live_shipment_traceability/: code.html
PrototipoGrafico/vessel_fleet_management/: code.html
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/models/: event.py  location.py  port.py  route.py  shipment.py
app/schemas/: cargo.py  client.py  container.py  contract.py  location.py  personnel.py  shipment.py
app/services/: base.py  cargo_service.py  client_service.py  (+6 more)
gateway/: .env.example  API_DOCUMENTATION.md  Dockerfile  README.md  alembic.ini  create_admin.py  crud_postman_collection.json  fernet_key.txt  requirements.txt  setup_database.py  simple_test.py  test_gateway.py
marine-api/: .dockerignore  Dockerfile  alembic.ini  requirements.txt
scripts/: connect-cloud.sh  fix-install.sh  init-db.sql  run-migrations.sh  setup-db.sh
tests/: conftest.py  test_containers.py  test_health.py  test_services.py  test_vessels.py
(+168 files in other folders)
